--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,18 +1,17 @@
-name: Build frontend image
+name: Build backend image
 
 on:
   push:
     branches: [ "github-actions" ]
     paths:
-      - 'src/**'
-      - 'package.json'
-      - 'prod.Dockerfile'
-      - 'package-lock.json'
-      - '.github/workflows/frontend.yml'
+      - 'server/**'
+      - 'requirements.txt'
+      - 'backend.Dockerfile'
+      - '.github/workflows/backend.yml'
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: rich-spotify-playlist
+  IMAGE_NAME: rich-spotify-playlist-api
 
 jobs:
   build:
@@ -43,6 +42,6 @@ jobs:
         with:
           push: true
           context: .
-          file: prod.Dockerfile
+          file: backend.Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
