--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -37,4 +37,4 @@ jobs:
           push: true
           context: .
           file: backend.Dockerfile
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
