--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -33,5 +33,7 @@ jobs:
         with:
           push: true
           context: .
+          build-args: |
+            VITE_API_LINK=/api
           file: prod.Dockerfile
           tags: ghcr.io/matuszelenak/rich-spotify-playlist:latest
