--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -32,5 +32,5 @@ jobs:
         with:
           push: true
           context: .
-          file: backend.Dockerfile
+          file: prod.backend.Dockerfile
           tags: ghcr.io/matuszelenak/rich-spotify-playlist-api:latest
