--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,39 @@
 version: "3"
 services:
+  nginx:
+    image: nginx
+    container_name: spotify_nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./default.conf:/etc/nginx/conf.d/default.conf
   api:
+    container_name: spotify_api
     build:
-      dockerfile: backend.Dockerfile
+      dockerfile: dev.backend.Dockerfile
       context: .
     env_file:
       - .env
+    environment:
+      - FRONTEND_URL=http://localhost:3000
+    volumes:
+      - ./server:/app
     ports:
       - "8000:8000"
 
   frontend:
+    container_name: spotify_frontend
     build:
-      dockerfile: prod.Dockerfile
+      dockerfile: dev.frontend.Dockerfile
       context: .
-      args:
-        - VITE_API_LINK=http://localhost:8000
     ports:
-      - "80:80"
+      - "3000:3000"
+    volumes:
+      - ./src:/app/src
+      - ./vite.config.js:/app/vite.config.js
+      - ./tsconfig.json:/app/tsconfig.json
+      - ./public:/app/public
+      - ./index.html:/app/index.html
+    environment:
+      - VITE_API_LINK=http://localhost/api
+    command: "npm start"
