set branch for master in actions

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,7 +2,7 @@ name: Build backend image
 
 on:
   push:
-    branches: [ "github-actions" ]
+    branches: [ "master" ]
     paths:
       - 'server/**'
       - 'requirements.txt'
