--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,14 +1,13 @@
-name: Build frontend image
+name: Build backend image
 
 on:
   push:
     branches: [ "master" ]
     paths:
-      - 'src/**'
-      - 'package.json'
-      - 'prod.Dockerfile'
-      - 'package-lock.json'
-      - '.github/workflows/frontend.yml'
+      - 'server/**'
+      - 'requirements.txt'
+      - 'backend.Dockerfile'
+      - '.github/workflows/backend.yml'
 
 jobs:
   build:
@@ -29,11 +28,9 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v2
         with:
           push: true
           context: .
-          build-args: |
-            VITE_API_LINK=/api
-          file: prod.frontend.Dockerfile
-          tags: ghcr.io/matuszelenak/rich-spotify-playlist:latest
+          file: prod.backend.Dockerfile
+          tags: ghcr.io/matuszelenak/rich-spotify-playlist-api:latest
