fix dockerfle paths in actions

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'server/**'
       - 'requirements.txt'
-      - 'backend.Dockerfile'
+      - 'prod.backend.Dockerfile'
       - '.github/workflows/backend.yml'
 
 jobs:
