--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -5,9 +5,6 @@ on:
     branches: [ "master" ]
     paths:
       - 'src/**'
-      - 'package.json'
-      - 'prod.frontend.Dockerfile'
-      - 'package-lock.json'
       - '.github/workflows/frontend.yml'
 
 jobs:
@@ -32,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          context: .
+          context: frontend
           build-args: |
             VITE_API_LINK=/api
           file: prod.frontend.Dockerfile
