--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,3 +46,16 @@ services:
     restart: unless-stopped
     ports:
       - "4000:4000"
+
+  db:
+    container_name: spotify_db
+    image: postgres:14-alpine
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
