--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           push: true
           context: server
-          file: prod.Dockerfile
+          file: server/prod.Dockerfile
           tags: ghcr.io/matuszelenak/rich-spotify-playlist-api:latest
