--- a/.github/workflows/bpm.yml
+++ b/.github/workflows/bpm.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           push: true
           context: bpm
-          file: Dockerfile
+          file: bpm/Dockerfile
           tags: ghcr.io/matuszelenak/rich-spotify-playlist-bpm:latest
