--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "master" ]
     paths:
-      - 'src/**'
+      - 'frontend/**'
       - '.github/workflows/frontend.yml'
 
 jobs:
