Add openable drawer, refactor bpm fetching

--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
+    "lodash": "^4.17.21",
     "music-tempo": "^1.0.3",
     "web-audio-api": "^0.2.2"
   },
