update client id to vars

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -33,5 +33,6 @@ jobs:
           build-args: |
             VITE_API_LINK=/api
             VITE_WS_LINK=wss://swing.the-killer.app/api/ws
+            VITE_SPOTIFY_CLIENT_ID=${{ vars.SPOTIFY_CLIENT_ID }}
           file: frontend/prod.Dockerfile
           tags: ghcr.io/matuszelenak/rich-spotify-playlist:latest
