--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: Production
     permissions:
       contents: read
       packages: write
