Replace chartjs with apexcharts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,12 @@
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.42",
     "@vitejs/plugin-react": "^4.2.1",
+    "apexcharts": "^3.45.1",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "lodash": "^4.17.21",
-    "qs": "^6.11.2",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
