--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.42",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.45.1",
     "axios": "^1.6.2",
