--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "bpm-detector",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "forever index.js"
+    "start": "nodemon index.ts"
   },
   "author": "",
   "dependencies": {
@@ -16,9 +16,16 @@
     "express-ws": "^5.0.2",
     "lodash": "^4.17.21",
     "music-tempo": "^1.0.3",
+    "ts-node": "^10.9.2",
     "web-audio-api": "^0.2.2"
   },
   "devDependencies": {
-    "prisma": "^5.7.1"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-ws": "^3.0.4",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.10.7",
+    "prisma": "^5.7.1",
+    "typescript": "^5.3.3"
   }
 }
