--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "express-ws": "^5.0.2",
     "lodash": "^4.17.21",
     "music-tempo": "^1.0.3",
+    "prisma": "^5.7.1",
     "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "web-audio-api": "^0.2.2"
   },
   "devDependencies": {
@@ -24,8 +26,6 @@
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
     "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.7",
-    "prisma": "^5.7.1",
-    "typescript": "^5.3.3"
+    "@types/node": "^20.10.7"
   }
 }
